@@ -3,6 +3,8 @@ Changelog
 
 7.6-dev - (unreleased)
 ----------------------
+* Bug fix: Display data owner title in provenance info
+  [szabozo0 #16585]
 
 7.5 - (2013-06-17)
 ------------------
